# tff

./: .gitignore  .release-please-manifest.json  AGENT_TASK_WORKFLOW.md  CHANGELOG.md  Makefile  README.md  conftest.py  pyproject.toml  release-please-config.json  test_health_cli.py
.AI/: AGENT_TASK_WORKFLOW.md
.githooks/: pre-push
.github/: labeler.yml
.github/workflows/: ci.yml  labeler.yml  pr-title.yml  release-please.yml
docs/: contributing.md  dbt.md  rules_and_checks.md  sqlmesh.md
examples/minimal-sqlmesh-project/: fitness_functions.yaml  settings.yaml
examples/minimal-sqlmesh-project/models/core/: layer_violation.sql  users.sql
examples/minimal-sqlmesh-project/models/marts/finance/: finance_stats.sql
examples/minimal-sqlmesh-project/models/marts/marketing/: marketing_all_users.sql
scripts/: audit.py
src/sqlmesh_ff/: __init__.py  cli.py  config.py  report.py
src/sqlmesh_ff/checks/: custom_exclusions.py  dependency_graph.py  schema_contracts.py
src/sqlmesh_ff/rules/: __init__.py  classification_macros.py  column_names.py  column_types.py  filename_equals_modelname.py  metadata.py  no_positional_group_by_or_order_by.py  no_select_star.py  sql_complexity.py
tests/: test_column_rules.py  test_config.py  test_custom_exclusions.py  test_layer_filtering.py  test_loader.py  test_metadata.py  test_no_positional_group_by_or_order_by.py  test_no_select_star.py  test_report.py  test_runner.py  test_schema_contracts.py
tests/fixtures/minimal_project/: config.py  settings.yaml
